<resources>
    <string name="app_name">Z2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZŁAZ WĘDROWNIKÓW</string>
    <string name="nav_header_subtitle">POD POŁUDNIOWYM KRZYŻEM</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Strona Główna</string>
    <string name="menu_gallery">Galeria Zdjęć</string>
    <string name="menu_slideshow">Trasy</string>
    <string name="menu_tools">Kalendarz</string>
    <string name="menu_klimat">Pogoda</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home_item_termin">Od 30go. grudnia 2019 do 8go. Stycznia 2020.</string>
    <string name="home_item_temperature">Klimaty</string>
    <string name="home_item_temperature_bsas">Buenos Aires  20°/35°</string>
    <string name="home_item_temperature_sma">San Martin de los Andes  -1°/30°</string>
    <string name="home_item_mayor">Złaz jest przewidziany dla starszych Wędrowników i Wędrowniczek powyżej lat 18 tu</string>
    <string name="title_activity_trasy">Map</string>

    <string name="trasa_bsas">Trasa w Buenos Aires</string>
    <string name="trasa_sma">Trasa w San Martin de los Andes</string>
    <string name="trasa_wedro">Trasa wedrówki</string>

    <string name="title_sma">San Martin de los Andes</string>
    <string name="title_bsas">Buenos Aires</string>

    <string name="title_diciembre">Grudzień</string>
    <string name="title_enero">Styczeń</string>

    <string name="suff_day">D</string>
    <string name="suff_hours">G</string>
    <string name="suff_min">M</string>
    <string name="suff_sec">S</string>


    <string name="historic_media">Średnia hist.</string>
    <string name="date_1">Pon. 30/12</string>
    <string name="date_2">Wt. 31/12</string>
    <string name="date_3">Śr. 01/01</string>
    <string name="date_4">Czw. 02/01</string>
    <string name="date_5">Pt. 03/01</string>
    <string name="date_6">Sob. 04/01</string>
    <string name="date_7">Niedz. 05/01</string>
    <string name="date_8">Pon. 06/01</string>
    <string name="date_9">Wt. 07/01</string>
    <string name="date_10">Śr. 08/01</string>


    <string name="date_niedz">Niedz.</string>
    <string name="date_pon">Pon.  </string>
    <string name="date_wt">Wt.   </string>
    <string name="date_sr">Śr.   </string>
    <string name="date_csz">Czw.  </string>
    <string name="date_pt">Pt.   </string>
    <string name="date_sob">Sob.  </string>


    <string name="temperature_sm__1">20°/4°</string>
    <string name="temperature_sm__2">18°/3°</string>
    <string name="temperature_sm__3">19°/5°</string>
    <string name="temperature_sm__4">20°/5°</string>
    <string name="temperature_sm__5">19°/5°</string>
    <string name="temperature_sm__6">19°/5°</string>
    <string name="temperature_sm__7">23°/8°</string>
    <string name="temperature_sm__8">24°/9°</string>
    <string name="temperature_sm__9">20°/9°</string>
    <string name="temperature_sm__10">21°/6°</string>

    <string name="temperature_bsas_1">30°/22°</string>
    <string name="temperature_bsas_2">30°/22°</string>
    <string name="temperature_bsas_3">29°/21°</string>
    <string name="temperature_bsas_4">30°/21°</string>
    <string name="temperature_bsas_5">28°/21°</string>
    <string name="temperature_bsas_6">27°/21°</string>
    <string name="temperature_bsas_7">28°/22°</string>
    <string name="temperature_bsas_8">29°/22°</string>
    <string name="temperature_bsas_9">30°/22°</string>
    <string name="temperature_bsas_10">31°/22°</string>

    <string name="h_temperature_sm__1">21°/9°</string>
    <string name="h_temperature_sm__2">21°/9°</string>
    <string name="h_temperature_sm__3">22°/9°</string>
    <string name="h_temperature_sm__4">22°/9°</string>
    <string name="h_temperature_sm__5">22°/9°</string>
    <string name="h_temperature_sm__6">22°/9°</string>
    <string name="h_temperature_sm__7">22°/9°</string>
    <string name="h_temperature_sm__8">22°/9°</string>
    <string name="h_temperature_sm__9">23°/9°</string>
    <string name="h_temperature_sm__10">23°/9°</string>


    <string name="h_temperature_bsas_1">27°/20°</string>
    <string name="h_temperature_bsas_2">27°/20°</string>
    <string name="h_temperature_bsas_3">27°/20°</string>
    <string name="h_temperature_bsas_4">27°/20°</string>
    <string name="h_temperature_bsas_5">27°/20°</string>
    <string name="h_temperature_bsas_6">27°/21°</string>
    <string name="h_temperature_bsas_7">27°/21°</string>
    <string name="h_temperature_bsas_8">28°/21°</string>
    <string name="h_temperature_bsas_9">28°/21°</string>
    <string name="h_temperature_bsas_10">28°/21°</string>


    <string name="home_message">Czas do rozpoczęcia Złazu</string>

</resources>
