<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ar.com.rys.z2020.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ar.com.rys.z2020.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ar.com.rys.z2020.ui.trasy.TrasyFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_trasy" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="ar.com.rys.z2020.ui.callendar.CallendarFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_callendar" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ar.com.rys.z2020.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="ar.com.rys.z2020.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>