<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_paths"
            android:icon="@drawable/ic_map_marked_solid"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_alt_solid"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_weather_solid"
            android:title="@string/menu_klimat" />

    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    -->

</menu>
